# EUBUCCO-Dissemination

./: .gitignore  Documentation.md  README.md  TODO.md  cors.json
.github/workflows/: deploy.yml
bechmarking/: gpkg_vs_parquet.py
benchmarking/: gpkg_vs_parquet.py
data_conversions/: main.py  partition.py  pmtiles_generation.py  pyproject.toml  s3_access.py  utils.py
reports/Dissemination_of_EUBUCCO-Project_plan/: content.typ  main.typ
reports/template/: cover-utils.typ  cover.typ
website/: .gitignore  about.html  data.html  index.html  map.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
website/resources/css/: styles.css
website/resources/js/: footer.ts  header.ts  map.ts
website/src/: main.ts  style.css
