[project]
name = "eubucco-dissemination"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "aiofiles>=25.1.0",
  "aiohttp>=3.13.2",
  "boto3>=1.41.5",
  "duckdb>=1.4.3",
  "gdal>=3.12.1",
  "geopandas>=1.1.1",
  "geoparquet-io==0.8.0",
  "h3>=4.4.1",
  "pyarrow>=22.0.0",
  "pydantic>=2.12.5",
  "python-dotenv>=1.2.1",
  "requests>=2.32.5",
  "tqdm>=4.67.1",
]
